style: UI polish, tooltips, and code cleanup (v1.2.1)